# snakechain

./: .gitignore  README.md  docker-compose.yml
docker/: Dockerfile
docker/node/: Dockerfile  entrypoint.sh  wait_for_storage.sh
docker/node/scripts/: compile_proto.sh  entrypoint.sh  formatter.sh
docker/rest/: Dockerfile  entrypoint.sh
docker/storage/: configure.sh
snakechain/: cli.py  pyproject.toml
snakechain/blockchain/: __init__.py  exceptions.py
snakechain/blockchain/block/: __init__.py  body.py  header.py
snakechain/blockchain/buffer/: __init__.py
snakechain/blockchain/config/: __init__.py
snakechain/blockchain/integrity/: __init__.py
snakechain/blockchain/server/: __init__.py  base.py  typing.py
snakechain/blockchain/server/proto/: __init__.py  block.proto  element.proto  hello.proto  stats.proto
snakechain/blockchain/server/proto/python/: __init__.py
snakechain/blockchain/storage/: __init__.py
snakechain/blockchain/utils/: __init__.py  bytes.py  crypto.py
snakechain/node/: cli.py  node.py  pyproject.toml
snakechain/node/blockchain/: __init__.py  block.py  exceptions.py
snakechain/node/blockchain/block/: __init__.py  body.py
snakechain/node/blockchain/buffer/: __init__.py
snakechain/node/blockchain/config/: __init__.py
snakechain/node/blockchain/storage/: __init__.py
snakechain/node/blockchain/utils/: __init__.py  bytes.py  crypto.py  storage.py
snakechain/rest/: pyproject.toml  rest.py
tests/: test_block.py  test_blockchain.py  test_snakechain.py
