[tool.poetry]
name = "snakechain-node"
version = "0.1.0"
description = "Blockchain node for Snakechain"
authors = ["Mc <phenom.home@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.16.1"
typer = "^0.3.1"
redis = "^3.5.3"
black = "^19.10b0"
couchbase = "^3.0.3"
grpclib = "^0.3.2"
protobuf = "^3.12.4"
betterproto = {extras = ["compiler"], version = "^1.2.5"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
