[tool.poetry]
name = "snakechain-node"
version = "0.1.0"
description = "Blockchain node for Snakechain"
authors = ["Mc <phenom.home@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.16.1"
typer = "^0.3.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
