[tool.poetry]
name = "snakechain-rest"
version = "0.1.0"
description = "Blockchain REST server for Snakechain"
authors = ["Mc <phenom.home@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.59.0"
uvicorn = "^0.11.6"
ipython = "^7.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
